# jaxa

./: .behaverc  .flake8  README.md  RELEASE.md  TODO.md  noxfile.py  pyproject.toml  pytest.ini
.github/: dependabot.yaml
.github/workflows/: format_checks.yaml  main.yml  release.yml
features/: export.feature  test.feature  test_query.feature  testexecutions.feature  testplan.feature  testset.feature  testset_query.feature
features/steps/: jaxa_steps.py  test_steps.py  testexecutions_steps.py  testplan_steps.py  testrun_steps.py  testset_steps.py
features/steps/support/: __init__.py  jaxa_context_data.py  test_actions.py  testexecutions_actions.py  testplan_actions.py  testrun_actions.py  testset_actions.py
jaxa/: README.md  __init__.py  jaxa_client.py
jaxa/api/graphql/: __init__.py  _gql_categories.py  _gql_client.py  _gql_enums.py  _gql_transport_factory.py
jaxa/api/jira/: README.md  __init__.py  _jira_categories.py  _jira_rest_api.py  jira_categories.py
jaxa/api/rest/: __init__.py  _categories.py  _enums.py  _exceptions.py  _session.py
jaxa/api/xray/: __init__.py  _xray_categories.py  (+3 more)
jaxa/utils/: __init__.py  common_utils.py  package_utils.py
scripts/: dev_process.py  release_process.py
tests/: conftest.py  test_example.py
tests/archive/: test_jira_customfields_usecases.py  test_jira_fields_usecases.py  test_jira_issues_usecases.py  test_jira_labels_usecases.py  test_jira_links_usecases.py  test_xray_test_usecases.py  test_xray_testplan_usecases.py  test_xray_testsets_usecases.py
tests/usecases/: UseCases.md  uc1.py  uc1_.py  uc2.py
(+36 files in other folders)
